--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <p><b>Skills:</b> Problem solving, Information Structures, Object Oriented Design, Algebraic Analysis, Leader.</p>
                             <p><b>Languages and Libraries:</b> C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
                             <p><b>Hardware and Operating Systems:</b> Arduino, Macintosh, Ubuntu, Windows.</p>
-                            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word).</p>
+                            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Premier), Microsoft Suite (Excel, OneNote, PowerPoint, Publisher, Word).</p>
                         </div>
                     </td>
                 </tr>
