--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div id="body">
         <div id="about">
             <h1 class="title">About Me</h1>
-            <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical experience in the software engineering field.</p>
+            <p class="body">Engineering student at Queens University, in my third year of the Mathematics and Engineering, Computing and Communications Program. Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. I am pursuing a career on software development, and am very interested in applications of machine learning.</p>
             <h3 class="body">Accomplishments</h3>
             <ul>
+                <li>1st place in the Queen’s Engineering Competition 2019 for Innovation</li>
                 <li>Won the Computer Science Award for academic achievement in 2015 and 2016. I was selected out of 80 students.</li>
-                <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
                 <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
                 <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
             </ul>
@@ -61,6 +61,19 @@
                         <p class="body">Attending Queens University completing a bachelor's degree in Mathematics and Engineering, Computing and Communications Option.</p>
                     </td>
                 </tr>
+                </tr>
+                    <td>
+                        <p><b>Relavent Courses:</b></p>
+                    </td>
+                    <td> 
+                        <ul>
+                            <li>Probability & Statistics</li>
+                            <li>Machine Learning & Neural Networks</li>
+                            <li>Data Structures & Algorithms</li>
+                        </ul>
+                    </td>
+            </tr>
+
             </table>
         </div>
         <div id="right">
@@ -73,9 +86,10 @@
                         <div id="toolbox">
                             <h2>Tool Box</h2>
                             <p><b>Skills:</b> Problem solving, Information Structures, Object Oriented Design, Algebraic Analysis, Leader.</p>
-                            <p><b>Languages and Libraries:</b> C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
-                            <p><b>Hardware and Operating Systems:</b> Arduino, Macintosh, Ubuntu, Windows.</p>
-                            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Premier), Microsoft Suite (Excel, OneNote, PowerPoint, Publisher, Word).</p>
+                            <p><b>Languages and Libraries:</b> C/C++, Java, Python, MATLAB, Assembly, Maple, Git, VHDL</p>
+                            <p><b>Hardware and Operating Systems:</b> Arduino, Raspberry Pie, Windows, Macintosh, Ubuntu</p>
+                            <p><b>Applications:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Premier), Microsoft Suite (Excel, OneNote, PowerPoint, Publisher, Word).</p>
+                            <p><b>Interpersonal Skills</b> Problem Solving, Analytical Thinking, & Reasoning, Leadership & Management, Teamwork & Collaboration</p>
                         </div>
                     </td>
                 </tr>
