--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <title>Mathew Jennings</title>
+
+  <script src="js/redirection-mobile.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+            // <![CDATA[
+              SA.redirection_mobile({
+                  mobile_url: "mjennings2.github.io/mobile.html",
+              });
+
+              // ]]>
+  </script>
+
   </head>
   <body>
       <div id="menu">
