--- a/mobile.html
+++ b/mobile.html
@@ -90,19 +90,33 @@
       <p class="body">Attending Queens University completing a bachelor's degree in
       Mathematics and Engineering, Computing and Communications Option.</p>
 
-      <table>
+      <table class = "left">
         <tr>
           <td>
             <p><b>Relavent Courses:</b></p>
-          </td>
-
-          <td>
             <ul>
-              <li>Probability &amp; Statistics</li>
+              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-274.html">Computer Architecture</a></li>
 
-              <li>Machine Learning &amp; Neural Networks</li>
+              <li><a href ="https://www.coursera.org/learn/machine-learning">Machine Learning &amp; Neural Networks</a></li>
 
-              <li>Data Structures &amp; Algorithms</li>
+              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-278.html">Data Structures 
+              &amp; Algorithms</a></li>
+              
+            </ul>
+            <ul>
+              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-221.html">Circuits</a> &amp; 
+                <a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-252.html">Electronics</a></li>
+
+              <li><a href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=3749">Computing Science</a></li>
+
+              <li><a href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4093">Real</a> &amp; <a href = "https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4668">Complex Analysis</a></li>
+            </ul>
+            <ul>
+              <li>Probability &amp; Statistics:  <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=2&coid=1018"> I </a> &amp; <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4104"> II </a></li>
+
+              <li><a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4082">Linear Algebra</a> &amp; <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4656">Algebraic Structures</a></li>
+
+              <li><a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4090">Differential Equations</a></li>
             </ul>
           </td>
         </tr>
